src/objects/FS_CommunityGroupITCPSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>FS_CG_Site_Badge_Type_Id__c</fullName>
        <label>CG Site Badge Type Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_ITCP_Private_Community_Group_Id__c</fullName>
        <label>ITCP Private Community Group Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Trigger_Checkbox_Id__c</fullName>
        <label>Trigger Checkbox Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Community Group ITCP Setting</label>
    <pluralLabel>Community Group ITCP Settings</pluralLabel>
</CustomObject>